# portable

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog  FindLibreSSL.cmake  LibreSSLConfig.cmake.in  Makefile.am  Makefile.am.common  OPENBSD_BRANCH  README  README.md  README.mingw.md  README.plan9  README.windows  Run tester projek  appveyor.yml  autogen.rc  autogen.sh  check-release.sh  cmake_export_symbol.cmake  cmake_generate_def.cmake  cmake_uninstall.cmake.in  config  configure.ac  configure.ac.tpl  dist-win.sh  dist.sh  gen-coverage-report.sh  gen-mkfile.sh  gen-mkfiles-all.sh  libcrypto.pc.in  libssl.pc.in  libtls.pc.in  mkfile  mkfile.proto  tap-driver.sh  update.rc  update.sh
.github/: renovate.json5  rust-openssl.patch
.github/scripts/: changelog.sh
.github/workflows/: android.yml  android_test.yml  cifuzz.yml  cmake-config.yml  cmake_config.yml  codeql.yml  coverity.yml  cross_test.yml  emscripten.yml  fedora-rawhide.yml  freebsd.yml  linux.yml  linux_test.yml  linux_test_asan.yml  macos.yml  (+12 more)
apps/: CMakeLists.txt  Makefile.am  Makefile.am.tpl  apps_win.c  mkfile  poll_win.c
apps/nc/: CMakeLists.txt  Makefile.am
apps/nc/compat/: accept4.c  readpassphrase.c
apps/ocspcheck/: CMakeLists.txt  Makefile.am
apps/ocspcheck/compat/: inet_ntop.c
apps/openssl/: CMakeLists.txt  Makefile.am  apps_win.c  mkfile
apps/openssl/compat/: apps_win.c  certhash_win.c  clock_gettime_osx.c  poll_win.c
crypto/: CMakeLists.txt  Makefile.am  Makefile.am.arc4random  Makefile.am.darwin-x86_64  Makefile.am.elf-aarch64  Makefile.am.elf-arm  Makefile.am.elf-mips  Makefile.am.elf-mips64  Makefile.am.elf-x86_64  Makefile.am.macosx-aarch64  Makefile.am.macosx-x86_64  Makefile.am.masm-x86_64  Makefile.am.mingw64-x86_64  Makefile.am.tpl  crypto.def  crypto_assembly.h  crypto_lock_win.c  crypto_win.list  mkfile
crypto/aes/: mkfile
crypto/arch/aarch64/: crypto_cpu_caps_darwin.c  crypto_cpu_caps_linux.c  crypto_cpu_caps_none.c  crypto_cpu_caps_windows.c
crypto/arch/mips/: crypto_arch.h
crypto/bio/: mkfile
crypto/bn/arch/loongarch64/: bn_arch.h
crypto/buffer/: mkfile
crypto/camellia/: mkfile
crypto/chacha/: mkfile
crypto/cmac/: mkfile
crypto/compat/: .gitignore  arc4random.h  arc4random_irix.h  asprintf.c  b_win.c  bsd-asprintf.c  crypto_lock_win.c  freezero.c  getdelim.c  getentropy_irix.c  getline.c  getopt_long.c  getpagesize.c  getprogname_linux.c  getprogname_unimpl.c  getprogname_windows.c  issetugid_aix.c  issetugid_hpux.c  issetugid_linux.c  issetugid_osx.c  issetugid_win.c  mkfile  poll.c  poll.h  posix_win.c  syslog.c  syslog.h  syslog_r.c  thread_private.h  timegm.c  ui_openssl_win.c
crypto/des/: mkfile
crypto/dh/: mkfile
crypto/ec/: mkfile
crypto/ecdh/: mkfile
crypto/ecdsa/: mkfile
crypto/engine/: mkfile
crypto/evp/: mkfile
crypto/gost/: mkfile
crypto/pem/: mkfile
crypto/pkcs7/: mkfile
crypto/poly1305/: mkfile
crypto/rc4/: mkfile
crypto/sha/: sha256_aarch64_intrinsic.c  sha256_aarch64_test.c  sha512_aarch64_intrinsic.c  sha512_aarch64_test.c
crypto/sm3/: mkfile
crypto/ui/: mkfile
crypto/whrlpool/: mkfile
crypto/x509/: mkfile
include/: CMakeLists.txt  Makefile.am  err.h  mkfile  poll.h  stdio.h  stdlib.h  string.h  syslog.h  unistd.h  win32netcompat.h
include/arpa/: inet.h
include/compat/: _apetypes.h  cet.h  dirent_msvc.h  endian.h  err.h  fcntl.h  freertosthreadcompat.h  getopt.h  limits.h  pthread.h  readpassphrase.h  stdint.h  stdio.h  stdlib.h  string.h  syslog.h  time.h  unistd.h
include/compat/machine/: endian.h
include/compat/netinet/: ip.h
include/compat/sys/: mman.h  stat.h  time.h  types.h
include/machine/: endian.h
include/openssl/: Makefile.am.tpl  mkfile  opensslconf.h.in
include/sys/: mman.h  times.h  types.h
libtls-standalone/: Makefile.am  VERSION  configure.ac
m4/: ax_code_coverage.m4  check-hardening-options.m4  check-libc.m4  check-os-options.m4  disable-compiler-warnings.m4
man/: CMakeLists.txt  Makefile.am  Makefile.am.tpl  links  update_links.sh
patches/: aarch64_crypto_arch.h.patch  aeadtest.c.patch  aes_amd64.c.patch  aes_i386.c.patch  amd64_crypto_arch.h.patch  arc4random.c.patch  bio.h.patch  bn.h.patch  bn_isqrt.c.patch  bn_lcl.h.patch  bn_local.h.patch  bn_macros.patch  bn_mod_exp2_mont.patch  bn_shift.patch  bn_sqrt.patch  byname.patch  cms.h.patch  crypto-assembly-portable.patch  crypto.h.patch  crypto_arch.h.patch  crypto_internal.h.patch  crypto_namespace.h.patch  e_old.c.patch  encode.c.patch  expired_certs.patch  gcm128.c.patch  gnu-stack.patch  handshake_table.c.patch  keypairtest.c.patch  libcrypto.hidden.patch  libcrypto_1.diff  libcrypto_2.diff  libssl.hidden.patch  mlkem_internal.h.patch  modes_local.h.patch  netcat.c.patch  ocsp_test.c.patch  openssl.c.patch  opensslconf.h.patch  opensslfeatures.h.patch  (+30 more)
plan9/: apps.patch  config  crypto.patch  defs  mkdirs  mklibdirs  obj_dat.awk  objects.awk  ssl.patch  tls.patch
scripts/: i686-w64-mingw32.cmake  test  travis  travis_failure  wrap-compiler-for-flag-check  x86_64-w64-mingw32.cmake
ssl/: CMakeLists.txt  Makefile.am  Makefile.am.tpl  mkfile  ssl.def
tests/: CMakeLists.txt  Makefile.am  Makefile.am.tpl  aeadtest.sh  arc4randomforktest.sh  asn1time_small.test  dtlstest.sh  evptest.sh  fork_rand.sh  keypairtest.sh  mlkem1024_decap_tests.sh  mlkem1024_encap_tests.sh  mlkem1024_keygen_tests.sh  mlkem1024_nist_decap_tests.sh  mlkem1024_nist_keygen_tests.sh  mlkem768_decap_tests.sh  mlkem768_encap_tests.sh  mlkem768_nist_decap_tests.sh  mlkem768_nist_keygen_tests.sh  mlkem_tests.bat  mlkem_tests.sh  ocsptest.bat  ocsptest.sh  optionstest.c  pidwraptest.c  pidwraptest.sh  pq_test.bat  pq_test.sh  quictest.bat  quictest.sh  renegotiation_test.bat  renegotiation_test.sh  rfc5280time_small.test  servertest.bat  servertest.sh  shutdowntest.bat  shutdowntest.sh  ssl_tlstest.sh  ssltest.bat  ssltest.sh  (+10 more)
tests/cmake/: CMakeLists.txt  crypto.c  ssl.c  tls.c
tests/compat/: mkstemp.c  pipe2.c
tls/: CMakeLists.txt  Makefile.am  Makefile.am.tpl  mkfile  tls.def
tls/compat/: getuid.c  pread.c  pwrite.c
(+17 files in other folders)
